2008-04-11  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff.

        Make DateMath.cpp thread safe.

        No measurable change on SunSpider (should be a very small speedup).

        * kjs/DateMath.cpp:
        (KJS::mimimumYearForDST): (KJS::equivalentYearForDST): Got rid of double caching of the
        same precomputed value.
        (KJS::calculateUTCOffset): (KJS::getUTCOffset): Factored actual UTC offset calculation code
        out of getUTCOffset(), and notification setup into initDateMath().

        (KJS::initDateMath): Added.

        * kjs/DateMath.h:
        * kjs/InitializeThreading.cpp:
        (KJS::initializeThreading):
        Added initDateMath().

2008-04-11  Alexey Proskuryakov  <ap@webkit.org>

        Windows build fix.

        * kjs/grammar.y:

2008-04-11  Alexey Proskuryakov  <ap@webkit.org>

        Tiger build fix. Forward declaring a union didn't work for whatever reason, make the
        parameters void*.

        * kjs/grammar.y:
        * kjs/lexer.cpp:
        (kjsyylex):
        (KJS::Lexer::lex):
        * kjs/lexer.h:

2008-04-11  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff.

        Generate a pure (re-entrant) parser with Bison.

        No change on SunSpider.

        * kjs/Parser.cpp:
        (KJS::Parser::parse):
        * kjs/grammar.y:
        * kjs/lexer.cpp:
        (kjsyylex):
        (KJS::Lexer::lex):
        * kjs/lexer.h:
        Pass state as function arguments, instead of global data. Don't call lexer() as often as
        before, as this function is about to become slower due to thread-specific storage.

        * kjs/function.cpp:
        (KJS::isStrWhiteSpace): Don't call isSeparatorSpace() for 8-bit characters, as these are
        already taken care of. This is a small speedup, compensating for a small slowdown caused
        by switching Bison mode.

2008-04-10  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff.
